--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@400;700&family=Titillium+Web&display=swap');
-
-header {
-  height: 50px;
-  display: flex;
-  padding: 0 2rem;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  background: #fafafa;
+*{
+  margin: 0;
+  padding: 0;
 }
