--- a/src/pages/Schedule/IITShedule.module.css
+++ b/src/pages/Schedule/IITShedule.module.css
@@ -8,8 +8,8 @@
 .buttons{
     display: flex;
     align-items: center;
-    column-gap: 50px;
     justify-content: center;
+    column-gap: 50px;
     padding-top: 20px;
 }
 .headDiv{
@@ -24,6 +24,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.drag{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.area{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70vw;
+  padding: 100px;
+  border: 3px double black;
+}
+.dropArea{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70vw;
+  /*height: 30vh;*/
+  background-color: gray;
+  border: 3px dashed black;
+  padding: 100px;
 }
 
 /* h2{
