--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,103 +1,122 @@
-.nav { 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    /*background-color: #333;*/
-    background: linear-gradient(to bottom right, #2c3e50, #2d7aad);
-    color: #fff; 
-    padding: 10px 20px; 
-  } 
-   
-  .nav__brand img { 
-    height: 40px; 
-  } 
-   
-  .nav__menu { 
-    list-style: none; 
-    display: flex; 
-    margin: 0; 
-    padding: 0; 
-  } 
-   
-  .nav__item { 
-    margin-right: 20px; 
-    display: inline; 
-    position: relative; 
-  } 
-   
-  .nav__item:last-child { 
-    margin-right: 0; 
-  } 
-   
-  .link { 
-    color: #fff; 
-    text-decoration: none; 
-  } 
-   
-  .dropdown { 
-    position: absolute; 
-    top: 100%; 
-    /* margin-top: 5px; */ 
-    left: 0; 
-    background-color: #333; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    border-radius: 5px; 
-    z-index: 1000; 
-    display: none; 
-    width: 180px; 
-  } 
-   
-  .dropdown ul { 
-    list-style: none; 
-    padding: 0; 
-    margin: 0; 
-  } 
-   
-  .dropdown__item { 
-    padding: 10px; 
-    color: #333; 
-    text-decoration: none; 
-    display: block; 
-    transition: background-color 0.3s ease; 
-    margin-bottom: 8px;  
-  } 
- 
-  .dropdown__item:hover { 
-    background-color: #f0f0f0; 
-  } 
-   
-  .nav__item:hover .dropdown { 
-    display: block; 
-  } 
-   
-  .nav__item_active .dropdown { 
-    display: block; 
-  } 
-   
-  .dropdown__item .link { 
-    color: #333;  
-    text-decoration: none;  
-    display: block;  
-    padding: 10px;  
-  } 
-   
-  .dropdown__item .dropdown__link { 
-    color: #333;  
-    text-decoration: none;  
-    display: block; 
-    padding: 10px;  
-  } 
-   
-  .dropdown__item .dropdown__link:hover { 
-    background-color: #f0f0f0; 
-  } 
-   
- 
-.dropdown__link { 
-    color: #f0f0f0;  
-    text-decoration: none;  
-  } 
-   
-  .dropdown__link:hover { 
-    background-color: #474646; 
-  }
+/* .fixed-nav{
+  width: 100%;
+  transition: background-color 0.3s ease;
+  height: 60px;
+} */
+
+.nav {
+  /* position: fixed; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  padding: 10px 20px;
+  width: 100%;
+  /* z-index: 1;
+  transition: background-color 0.3s ease;
+  height: 60px; */
+}
+
+/* .transparent {
+  background-color: transparent;
+}
+
+.bgDark {
+  background: rgb(39, 39, 39);
+} */
+
+.nav__brand img {
+  height: 50px;
+  filter: invert(1);
+  margin-left: 100px;
+}
+
+.nav__menu {
+  position: sticky;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__item {
+  margin-right: 25px;
+  display: inline;
+  position: relative;
+}
+
+.nav__item:last-child {
+  margin-right: 100px;
+}
+
+.link {
+  color: #fff;
+  text-decoration: none;
+}
+
+.dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: rgb(39, 39, 39);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  z-index: 1;
+  display: none;
+  width: 180px;
+}
+
+.dropdown ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown__item {
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+  display: block;
+  transition: background-color 0.3s ease;
+  margin-bottom: 8px;
+}
+
+.dropdown__item:hover {
+  background-color: #f0f0f0;
+}
+
+.nav__item:hover .dropdown {
+  display: block;
+}
+
+.nav__item_active .dropdown {
+  padding: 15px;
+  display: block;
+}
+
+.dropdown__item .link {
+  color: #333;
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+}
+
+.dropdown__item .dropdown__link {
+  color: #333;
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+}
+
+.dropdown__item .dropdown__link:hover {
+  background-color: #f0f0f0;
+}
+
+.dropdown__link {
+  color: #f0f0f0;
+  text-decoration: none;
+}
+
+.dropdown__link:hover {
+  background-color: #474646;
+}
