--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -3,6 +3,64 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #fff;
+}
+
+.wrapper {
+  position: absolute;
+  margin-left: 50px;
+  margin-top: 30px;
+}
+
+.text {
+  color: white;
+  font-family: monospace;
+  font-size: 130px;
+  white-space: nowrap; 
+  overflow: hidden; 
+  border-right: 3px solid white; 
+  animation: cursor 0.75s step-end infinite;
+}
+
+@keyframes cursor {
+  0% {
+    border-color: white;
+  }
+  50% {
+    border-color: transparent;
+  }
+  100% {
+    border-color: white;
+  }
+}
+
+@keyframes cursorAfter {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 3px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+.cursor {
+  width: 3px;
+  height: 100%;
+  background-color: white;
+  animation: cursorAfter 1s infinite;
+}
+
+.second {
+  animation-delay: 5s; 
+}
+
+.content{
+  width: 100%;
+  min-height:100vh;
+  background: rgb(39, 39, 39); 
 }
 
 .news {
@@ -11,6 +69,8 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+  /* backdrop-filter: blur(0.5rem); */
+
 }
 
 .lili{
@@ -23,18 +83,19 @@
 
 .card {
   width: 45rem;
-  background-color: #fff;
+  background-color: rgba(66, 66, 66, 0.5);
+  backdrop-filter: blur(0.5rem);
   border-radius: 4px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  border: 2px solid black;
+  border: 2px solid #fff;
 }
 
 .profile {
   display: flex;
   align-items: center;
   padding: 16px;
-  border-bottom: 1px solid #f0f0f0;
+  border-bottom: 2px solid #f0f0f0;
 }
 
 .profile_info {
@@ -123,7 +184,7 @@
 .edit_button:focus,
 .delete_button:focus {
   outline: none;
-  box-shadow: 0 0 0 2px #ccc;
+  box-shadow: 0 0 0 2px #ffffff;
 }
 
 .edit_button:active,
@@ -149,7 +210,7 @@
 .new_h{
   display: flex;
   justify-content: center;
-  border-bottom: 1px solid #f0f0f0;
+  border-bottom: 2px solid #f0f0f0;
   background-color: transparent;
   cursor: pointer;
   font-size: 16px;
@@ -157,11 +218,12 @@
   border-radius: 4px;
   margin-bottom: 15px;
   transition: background-color 0.2s ease;
-  width: 50%;
+  width: 45rem;
+  backdrop-filter: blur(0.5rem);
 }
 
 .new_text{
-  border-bottom: 1px solid #f0f0f0;
+  border-bottom: 2px solid #f0f0f0;
   background-color: transparent;
   cursor: pointer;
   font-size: 16px;
@@ -169,27 +231,29 @@
   border-radius: 4px;
   margin-bottom: 15px;
   transition: background-color 0.2s ease;
-  width: 50%;
+  width: 45rem;
+  backdrop-filter: blur(0.5rem);
 }
 
 .btn{
   border: none;
-  width: 50%;
+  width: 45rem;
   background-color: transparent;
   cursor: pointer;
   font-size: 16px;
   padding: 8px 16px;
   border-radius: 4px;
+  background: #555555;
   transition: background-color 0.2s ease;
 }
 
 .btn:hover{
-  background-color: #eee;
+  background: rgb(39, 39, 39);  
 }
 
 .btn:focus{
   outline: none;
-  box-shadow: 0 0 0 2px #ccc;
+  box-shadow: 0 0 0 2px rgb(68, 68, 68);
 }
 .btn:active{
   transform: translateY(2px);
