--- a/src/pages/Schedule/ScheduleFEIS.module.css
+++ b/src/pages/Schedule/ScheduleFEIS.module.css
@@ -1,17 +1,26 @@
+.container{
+    width: 100%;
+    height: 100vh;
+    background: rgb(39, 39, 39);  
+}
+
 .headDiv{
     padding-top: 30px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background: rgb(39, 39, 39);  
 }
 .Title{
     display: flex;
     align-items: center;
     justify-content: center;
+    
     /*padding-top: 30px;*/
 }
 
-.button{
+.button{    
+    padding-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
