--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -59,7 +59,7 @@
 
 .content{
   width: 100%;
-  min-height:100vh;
+  min-height:110vh;
   background: rgb(39, 39, 39); 
 }
 
@@ -107,17 +107,21 @@
 
 .profile_image {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   overflow: hidden;
 }
 
 .profile_image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  cursor: pointer;
+  /* filter: invert(1); */
+  width: 50px; /* Ширина контейнера */
+  height: 50px; /* Высота контейнера */
+  background: url(./avatar.png) no-repeat center; /* Фоновое изображение */
+  background-size: cover; /* Заполнение контейнера */
+  display: flex; /* Отображение элемента как flex */
+  justify-content: center; /* Выравнивание содержимого по горизонтали (по центру) */
+  align-items: center; /* Выравнивание содержимого по вертикали (по центру) */
 }
 
 .profile-details {
@@ -258,4 +262,3 @@
 .btn:active{
   transform: translateY(2px);
 }
-
