--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -5,19 +5,27 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.container{
+  width: 100%;
+  height: 100vh;
+  background: rgb(39, 39, 39);
+}
+
 .contain {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  background: rgb(39, 39, 39);
 }
 
 .card {
+  margin-top: 50px;
   width: 45rem;
   background-color: #fff;
   border-radius: 4px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
   overflow: hidden;
-  border: 2px solid black;
+  border: 2px solid #fff;
 }
 
 .profile {
@@ -25,6 +33,7 @@
   align-items: center;
   padding: 16px;
   border-bottom: 1px solid #f0f0f0;
+  background: rgb(39, 39, 39);
 }
 
 .profile_info {
@@ -55,6 +64,7 @@
 }
 
 .text{
+  color: #fff;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -65,6 +75,7 @@
 }
 
 .profile_nickname {
+  color: #fff;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -87,6 +98,7 @@
   align-items: center;
   padding: 10px; /*16*/
   border-top: 1px solid #eee;
+  background: rgb(39, 39, 39) ;
 }
 
 .edit_button {
@@ -100,7 +112,7 @@
 }
 
 .edit_button:hover {
-  background-color: #eee;
+  background-color: rgb(68, 68, 68);
 }
 
 .edit_button:focus {
@@ -130,4 +142,15 @@ span {
 
 .about h3{
   font-size: 10px;
+}
+
+.profile_image img{
+  width: 200px; /* Ширина контейнера */
+  height: 200px; /* Высота контейнера */
+  background: url(./avatar.png) no-repeat center; /* Фоновое изображение */
+  background-size: cover; /* Заполнение контейнера */
+  display: flex; /* Отображение элемента как flex */
+  justify-content: center; /* Выравнивание содержимого по горизонтали (по центру) */
+  align-items: center; /* Выравнивание содержимого по вертикали (по центру) */
+  filter: invert(1);
 }
