--- a/src/pages/Schedule/IITShedule.module.css
+++ b/src/pages/Schedule/IITShedule.module.css
@@ -14,6 +14,10 @@
     /*padding-top: 30px;*/
 }
 
+.back{
+  background-color: rgb(39, 39, 39);
+}
+
 .buttons{
     display: flex;
     align-items: center;
