--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -120,3 +120,19 @@
 .dropdown__link:hover {
   background-color: #474646;
 }
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+}
+
+.table th, .table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.table th {
+  background-color: #f2f2f2;
+  text-align: center;
+}
